# src/main/kotlin/no/elhub/auth/v1/domain/DocumentType.kt
@@ -1,0 +1,6 @@
+package no.elhub.auth.v1.domain
+
+enum class AuthorizationDocumentType {
+    ChangeOfEnergySupplierForOrganization,
+    MoveInAndChangeOfEnergySupplierForOrganization,
+}
